# brain-region-extractor

./: README.md  pyproject.toml
src/brain_region_database/: nifti.py
src/brain_region_database/process/: registration.py  size.py  vectorization.py
src/brain_region_database/scripts/: analyze_scan_regions.py  patch_scan.py
src/brain_region_extractor/: atlas.py  extract_brain_regions.py  nifti.py  statistics.py  util.py
src/brain_region_extractor/database/: engine.py  insertion.py  models.py  query.py
src/brain_region_extractor/process/: orientation.py  registration.py  size.py  spatialization.py
src/brain_region_extractor/scripts/: analyze_scan_regions.py  create_database.py  insert_scan.py  patch_scan.py
