[build-system]
requires = ["uv_build>=0.9.8"]
build-backend = "uv_build"

[project]
name = "brain-region-extractor"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "geoalchemy2",
    "nibabel",
    "nilearn>=0.12.1",
    "numpy>=2.3.4",
    "psycopg2-binary",
    "pydantic",
    "sqlalchemy",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]

[project.scripts]
analyze-scan-regions = "brain_region_extractor.scripts.analyze_scan_regions:main"
create-database      = "brain_region_extractor.scripts.create_database:main"
extract-scan-regions = "brain_region_extractor.scripts.extract_scan_regions:main"
insert-scan          = "brain_region_extractor.scripts.insert_scan:main"
patch-scan           = "brain_region_extractor.scripts.patch_scan:main"

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.lint]
ignore = ["E202", "E203", "E221", "E241", "E251", "E272"]
select = ["E", "F", "I", "N", "RUF", "UP", "W"]
